--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Web CLI</title>
+    <meta property="og:title" content="Web CLI" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ant2357.github.io/web-cli/" />
+    <meta property="og:image" content="https://ant2357.github.io/web-cli/ogp.png" />
+    <meta property="og:site_name" content="Web CLI" />
+    <meta property="og:description" content="Web CLI風のサイト" />
+    <meta name="twitter:card" content="summary" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
