--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,12 @@
     <meta property="og:url" content="https://ant2357.github.io/web-cli/" />
     <meta property="og:image" content="https://ant2357.github.io/web-cli/ogp.png" />
     <meta property="og:site_name" content="Web CLI" />
-    <meta property="og:description" content="Web CLI風のサイト" />
+    <meta property="og:description" content="Web CLI風" />
+
     <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Web CLI">
+    <meta name="twitter:description" content="Web CLI風">
+    <meta name="twitter:image" content="https://ant2357.github.io/web-cli/ogp.png">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
